--- a/index.html
+++ b/index.html
@@ -79,13 +79,32 @@
             <h2> <i class="fa fa-suitcase"></i>Experiences</h2>
           </div>
           <ul class="timeline">
+             <li>
+              <div class="timeline-badge primary">Now</div>
+              <div class="timeline-panel wow bounceInLeft">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">NetWorking engineering.</h4>
+                  <p><i class="fa fa-suitcase"></i> <a href="https://saobacdau.vn/" target="_blank">SaoBacDau</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
+                  <p><i class="fa fa-calendar"></i> 3/2018 - Present</p>
+                  <p><i class="fa fa-map-marker"></i> Ha Noi,Viet Nam</p>
+                </div>
+                <hr class="full-hr">
+                <div class="timeline-body" >
+                  <span class="collapse" id="details1">
+                    <p><strong>Missions</strong> : control & Support computer system of national post office.</p>
+                    <p><strong>Project</strong> : digital marketing, Social Insurance Receiving and Delivery</p>
+                  </span>
+                  <span class="btn btn-outline btn-success btn-details" data-toggle="collapse" data-target="#details1" >More info</span>
+                </div>
+              </div>
+            </li>
             <li>
               <div class="timeline-badge primary">Now</div>
               <div class="timeline-panel wow bounceInLeft">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Information Technology engineering.</h4>
                   <p><i class="fa fa-suitcase"></i> <a href="http://hanoi.vnpost.vn/" target="_blank">Ha Noi Post</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
-                  <p><i class="fa fa-calendar"></i> 4/2015 - Present</p>
+                  <p><i class="fa fa-calendar"></i> 4/2015 - 12/2017</p>
                   <p><i class="fa fa-map-marker"></i> Ha Noi,Viet Nam</p>
                 </div>
                 <hr class="full-hr">
