--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <ul class="timeline">
              <li>
               <div class="timeline-badge primary">Now</div>
-              <div class="timeline-panel wow bounceInLeft">
+              <div class="timeline-panel wow bounceInRight">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">NetWorking engineering.</h4>
                   <p><i class="fa fa-suitcase"></i> <a href="https://saobacdau.vn/" target="_blank">SaoBacDau</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
