--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
               <div class="timeline-panel wow bounceInRight">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">NetWorking engineering.</h4>
+                  <p><i class="fa fa-suitcase"></i> <a href="https://www.netpoleons.com" target="_blank">Netpoleons</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
+                  <p><i class="fa fa-calendar"></i> 4/2020 - Present</p>
+                  <p><i class="fa fa-map-marker"></i> Ha Noi,Viet Nam</p>
+                </div>
+                <hr class="full-hr">
+                <div class="timeline-body" >
+                  <span class="collapse" id="details1">
+                    <p><strong>Missions</strong> : Take care some vender and POC device for customer and support technical .</p>
+                    <p><strong>Project</strong> : TrendsMicro, A10, SonicWall, Ruckus.</p>
+                  </span>
+                  <span class="btn btn-outline btn-success btn-details" data-toggle="collapse" data-target="#details1" >More info</span>
+                </div>
+              </div>
+            </li>
+            <li>
+             <li>
+              <div class="timeline-badge primary">Now</div>
+              <div class="timeline-panel wow bounceInRight">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">NetWorking engineering.</h4>
                   <p><i class="fa fa-suitcase"></i> <a href="https://saobacdau.vn/" target="_blank">SaoBacDau</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
                   <p><i class="fa fa-calendar"></i> 3/2018 - Present</p>
                   <p><i class="fa fa-map-marker"></i> Ha Noi,Viet Nam</p>
