--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
           </div>
           <ul class="timeline">
              <li class="timeline-inverted">
-              <div class="timeline-badge success">5 months </div>
+              <div class="timeline-badge success"> Now </div>
               <div class="timeline-panel wow bounceInRight">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Digital Marketing</h4>
+                  <h4 class="timeline-title">NetWorking engineering</h4>
                   <p><i class="fa fa-calendar"></i> 07/2015</p>
                   <p><i class="fa fa-map-marker"></i> Hanoi, Vietnam</p>
                 </div>
@@ -116,6 +116,24 @@
               </div>
             </li>
             <li>
+               <li class="timeline-inverted">
+              <div class="timeline-badge success">  3/2018 - 3/2020 </div>
+              <div class="timeline-panel wow bounceInRight">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">NetWorking engineering</h4>
+                  <p><i class="fa fa-suitcase"></i> <a href="https://saobacdau.vn/" target="_blank">SaoBacDau</a><small class="text-muted">, specializing in computer system  (hardware and software) and control network services. </small></p>
+                  <p><i class="fa fa-calendar"></i> 3/2018 - 3/2020</p>
+                  <p><i class="fa fa-map-marker"></i> Hanoi, Vietnam</p>
+                </div>
+                <div class="timeline-body">
+                  <span class="collapse" id="details2">
+                    <p><strong>Working</strong> : Install and support database, computer system, software for “Zaloza” and "Lazada" of Post office combining with digital marketing partners </p>
+                    <p><img class="img-responsive img-thumbnail" src="index_files/avatar1.png" alt=""></p>
+                  </span>
+                  <span class="btn btn-outline btn-success btn-details" data-toggle="collapse" data-target="#details2" >More info</span>
+                </div>
+              </div>
+            </li>
              <li>
               <div class="timeline-badge primary"> 3/2018 - 3/2020 </div>
               <div class="timeline-panel wow bounceInRight">
