--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
                 <div class="footer-col">
                 <ul class="list-inline">
                   <li class="list-inline-item rl">
-                    <a href="https://www.facebook.com/ryo.amy.7" target="_blank" class="btn-social btn-outline">
+                    <a href="https://www.facebook.com/" target="_blank" class="btn-social btn-outline">
                       <i class="fa fa-fw fa-facebook rl"></i>
                        Facebook
                     </a>
                   </li>
                   <li class="list-inline-item rl">
-                    <a href="https://www.instagram.com/cold_winddd/?hl=vi" target="_blank" class="btn-social btn-outline">
+                    <a href="https://www.instagram.com/" target="_blank" class="btn-social btn-outline">
                       <i class="fa fa-fw fa-instagram wow bounceIn rl"></i>
                       Instagram
                     </a>
